<resources>
    <string name="app_name">PatternsAndRoadmapsApp</string>
    <string name="dateMock">date</string>
    <string name="descriptionMock">description</string>
    <string name="bookmarkImageDescription">bookmark</string>
    <string name="categoryIconImageDescription">categoryIcon</string>
    <string name="category">Категории (отделять пробелом)</string>
    <string name="title">Название</string>
    <string name="notesAddButtonDescription">add Note</string>
    <string name="postsPageName">Посты</string>
    <string name="patternsPageName">Паттерны</string>
    <string name="page_profile">Профиль</string>
    <string name="dot">dot</string>
    <string name="featuretype">featureType</string>
    <string name="difficultyImage">difficultyImage</string>
    <string name="problem">Проблема</string>
    <string name="solution">Решение</string>
    <string name="pseudocode">Псевдокод</string>
    <string name="useCase">Применимость</string>
    <string name="prosCons">Плюсы и минусы</string>
    <string name="addPattern">addPattern</string>
    <string name="titleNewNote">Создание новой заметки</string>
    <string name="titleNewRoadmap">Создание нового roadmap</string>
    <string name="description">Описание</string>
    <string name="save">Сохранить</string>
    <string name="news">Новости</string>
</resources>