<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/notesListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_sticky_note_2_24"
        android:title="@string/postsPageName"/>
    <item
        android:id="@+id/patternsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_book_24"
        android:title="@string/patternsPageName"/>
    <item
        android:id="@+id/newsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_public_24"
        android:title="@string/news"/>
    <item
        android:id="@+id/authFragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_person_24"
        android:title="@string/page_profile"/>
</menu>