<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="pattern"
            type="ru.boringowl.parapp.domain.model.patterns.Pattern"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@{pattern.title}"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toStartOf="@+id/bookmarkImage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/patternType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{pattern.type.title}"
                        app:layout_constraintBottom_toBottomOf="@+id/patternTypeImage"
                        app:layout_constraintStart_toEndOf="@+id/patternTypeImage"
                        app:layout_constraintTop_toTopOf="@+id/patternTypeImage" />

                    <ImageView
                        android:id="@+id/patternTypeImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/categoryIconImageDescription"
                        app:layout_constraintStart_toEndOf="@+id/difficultyImage"
                        app:layout_constraintTop_toBottomOf="@+id/title"
                        app:srcCompat="@drawable/ic_round_circle_24" />

                    <ImageView
                        android:id="@+id/bookmarkImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/bookmarkImageDescription"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_round_bookmark_24" />

                    <ImageView
                        android:id="@+id/difficultyImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        app:layout_constraintBottom_toBottomOf="@+id/patternTypeImage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/patternTypeImage"
                        app:srcCompat="@drawable/ic_round_sentiment_neutral_24"
                        android:contentDescription="@string/difficultyImage" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@{pattern.description}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/patternTypeImage" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textViewProblem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/problem"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/problem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@{pattern.problem}" />

                <TextView
                    android:id="@+id/textViewSolution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/solution"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/solution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@{pattern.solution}" />

                <TextView
                    android:id="@+id/textViewCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/pseudocode"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@{pattern.solutionInCode}" />

                <TextView
                    android:id="@+id/textViewUseCase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/useCase"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/useCase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@{pattern.useCase}" />

                <TextView
                    android:id="@+id/textViewProsCons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/prosCons"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    app:context="@{context}"
                    app:features="@{pattern.feature}"
                    tools:listitem="@layout/pattern_feature_list_item" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>